bynkc/tests/fixtures/positive/13_function_arithmetic/input.karn
commons demo {
  fn formula(a: Int, b: Int) -> Int {
    (a + b) * (a - b) / 2
  }
}
