bynkc/tests/fixtures/negative/07_unknown_function/input.karn
commons demo {
  fn caller(x: Int) -> Int {
    missing(x)
  }
}
